Photo: Fix caption UI on iOS (#1514)

--- a/src/components/middle/message/_message-content.scss
+++ b/src/components/middle/message/_message-content.scss
@@ -451,6 +451,10 @@
   &.text .media-inner,
   &.text .Album {
     margin-bottom: 0.375rem;
+
+    body.is-ios .Message.own & {
+      margin-bottom: 0.375rem;
+    }
   }
 
   .media-loading {
